# cyber_sense

./: .gitignore  ARCHITECTURE.md  DEMO_STORY.md  LICENSE  README.md  SCENARIOS.md  demo.py  pyproject.toml  run_continuous.py
notebooks/: cyber_ignition_agents_playground.ipynb  cyber_sense_playground.ipynb  cyber_sentinels_playground.ipynb
src/cyber_sense/: __init__.py  cli.py
src/cyber_sense/agent/: __init__.py  agent.py  graph.py  prompts.py  tools.py
src/cyber_sense/memory/: store.py
src/cyber_sense/sensor/: __init__.py  monitor.py  orchestrator.py
src/cyber_sense/simulation/: malicious.py  normal.py
tests/integration/: test_pipeline.py
tests/unit/: test_monitor.py  test_orchestrator.py  test_report.py  test_scenarios.py
